--- a/debian/control
+++ b/debian/control
@@ -3,16 +3,17 @@ Section: science
 Priority: optional
 Maintainer: Lars Kruse <devel@sumpfralle.de>
 Build-Depends:
+ debhelper-compat (= 13),
  codespell,
- debhelper (>= 9),
  dh-python,
  help2man,
- python,
+ python3,
  python3-flake8,
  python3-numpy,
  python3-pytest,
  python3-setuptools,
  python3-svg.path,
+ python3-yaml,
 Standards-Version: 3.9.8
 Homepage: https://github.com/SebKuzminsky/pycam
 
