Added own storage format to list of handled formats in .desktop file.
PyCAM save its state as a YAML file, and should thus be proposed
as a program to open it in graphical file browsers.

--- a/share/desktop/pycam.desktop
+++ b/share/desktop/pycam.desktop
@@ -8,6 +8,5 @@ TryExec=pycam
 Terminal=false
 Type=Application
 Categories=Development;Engineering;Robotics;Education;Science;2DGraphics;VectorGraphics;3DGraphics;X-CNC;
-MimeType=application/sla;image/svg+xml;application/postscript;image/vnd.dxf;
+MimeType=application/x-yaml;application/sla;image/svg+xml;application/postscript;image/vnd.dxf;
 Icon=pycam
-
