--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Architecture: all
 Depends:
  librecad-data,
  python3-gi,
+ gir1.2-gtk-3.0,
  python3-svg.path,
  python3-yaml,
  ${misc:Depends},
